# aegis-llm-gateway

./: .env.example  .gitignore  .vpeetla-skills.json  AGENTS.md  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  vercel.json
demo/: index.html
docs/: ARCHITECTURE.md  DEPLOY_WIRING.md  ECOSYSTEM.md
src/aegis_llm_gateway/: byok_providers.py  cache_client.py  decisions.py  finops_client.py  models.py  provider_infer.py  settings.py  stub_provider.py  tenants.py
src/aegis_llm_gateway/api/: main.py
tests/: test_byok.py  test_gateway.py  test_routing_policy.py  test_tenant_identity.py
