[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-llm-gateway"
version = "0.1.0"
description = "Shared OpenAI-shaped LLM gateway for the vpeetla-ai federated control plane."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Venkata Peetla" }]
dependencies = [
  "aegis-routing-contract @ git+https://github.com/vpeetla-ai/aegis-routing-contract.git@master",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "respx>=0.21.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
